Refactoring SynchronousDispatcher to allow for more reusability in the Spring MVC framework
Using interfaces instead of concrete classes where possible

First steps in making the Spring MVC code work with AysnchronousDispatcher

git-svn-id: file:///Users/billburke/jboss/resteasy/resteasy-git/svn-server-sync/resteasy/trunk@480 2b1ed4c4-5db3-0410-90e4-80a7a6204c25